--- a/src/app/feature/user/top-menu/top-menu.component.html
+++ b/src/app/feature/user/top-menu/top-menu.component.html
@@ -20,7 +20,9 @@
     {{ currentAccount().name }}
   </div>
   <div class="content collapsable" [class.open]="isOpenMenu()">
-    <app-feature-flag feature="show_user_accounts">
+    <app-feature-flag
+      feature="show_user_accounts"
+      [accountSettings]="activeAccount().settings">
       @if (userAccounts().length > 1) {
         <div class="accounts_switcher">
           <div class="accounts_title" [class.open]="isAccountChange()">
@@ -55,14 +57,18 @@
       }
     </app-feature-flag>
 
-    <app-feature-flag feature="user_settings">
+    <app-feature-flag
+      feature="user_settings"
+      [accountSettings]="activeAccount().settings">
       <a tabindex="0">
         <ng-icon name="saxSetting2Outline" size="22"></ng-icon>
         Settings
       </a>
     </app-feature-flag>
 
-    <app-feature-flag feature="user_feature_flag">
+    <app-feature-flag
+      feature="user_feature_flag"
+      [accountSettings]="activeAccount().settings">
       <a
         tabindex="0"
         (click)="showFeatures.set(true)"
@@ -101,8 +107,11 @@
       Log out
     </a>
 
-    <app-feature-flag feature="user_feature_flag">
+    <app-feature-flag
+      feature="user_feature_flag"
+      [accountSettings]="activeAccount().settings">
       <app-show-user-features
+        [features]="allFeatures()"
         [showFeatures]="showFeatures()"
         (save)="saveFeatureClick($event)"
         (close)="showFeatures.set(false)" />
