fix: fix class for feature chackbox

--- a/src/app/feature/user/features/show-user-features/show-user-features.component.html
+++ b/src/app/feature/user/features/show-user-features/show-user-features.component.html
@@ -13,9 +13,8 @@
         <input
           type="checkbox"
           [name]="feature.name"
-          class="toggle"
+          class="toggle toggle-success"
           (change)="changeFeature(feature, $event)"
-          [class.toggle-success]="feature.isActive"
           [attr.checked]="feature.isActive ? 'checked' : null" />
       </div>
     </div>
