fix: fire save setting action on saving feature status

--- a/src/app/share/layout/header/header.component.html
+++ b/src/app/share/layout/header/header.component.html
@@ -22,6 +22,7 @@
             [authorizedUserToken]="token"
             [activeAccount]="account"
             (accountClick)="goToDashboard()"
+            (saveFeature)="saveFeature($event)"
             (logout)="logout()" />
         </div>
       }
