fix: dropdown menu closing now on click to menu item

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -1,7 +1,7 @@
 <div
   class="event-form bg-lighter timeline-box relative pt-0"
   [class.skeleton]="isDisabled()">
-  <div class="form-tabs join rounded-t-none">
+  <div class="form-tabs join flex justify-center rounded-t-none">
     <a
       tabindex="0"
       class="btn join-item"
