--- a/src/app/pages/non-authorized/develop/develop-page.component.html
+++ b/src/app/pages/non-authorized/develop/develop-page.component.html
@@ -2,6 +2,18 @@
   <div class="p-4">
     <app-content-title title="UI components" />
 
+    <div class="py-4" id="EditEventFormComponent">
+      <h2 class="text-2xl">EditEventFormComponent</h2>
+      <div class="mt-4 grid grid-cols-2 gap-4">
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [loading]="true" />
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="4" />
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="0" />
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="1" />
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="2" />
+        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="3" />
+      </div>
+    </div>
+
     <div class="py-4" id="LayoutTesting">
       <h2 class="text-2xl">Layout testing</h2>
       <div class="mt-4 grid w-full grid-cols-1 gap-4">
@@ -29,20 +41,6 @@
       <h2 class="text-2xl">TimelineComponent</h2>
       <div class="mt-4 grid w-full grid-cols-1 gap-4">
         <app-timeline [timeline]="dumpTimelineEvents()" />
-      </div>
-    </div>
-
-    <div class="py-4" id="EditEventFormComponent">
-      <h2 class="text-2xl">EditEventFormComponent</h2>
-      <div class="mt-4 grid grid-cols-2 gap-4">
-        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="0" />
-        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="1" />
-        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="2" />
-        <app-edit-event-form [editEvent]="dumpAddEvent()" [openTab]="3" />
-        <app-edit-event-form
-          [editEvent]="dumpAddEvent()"
-          [loading]="true"
-          class="col-span-2" />
       </div>
     </div>
 
