refactor: refactoring authorization
feat: create auth service

feat: add login redirect page

refactor: remove old auth code

refactor: remove old auth store

fix: update index page

refactor: refactor navigation effects

feat: redirect to dashboard after login

feat: set user to account state

feat: set user on redirect

fix: remove some routers

chore: update dependencies

--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -7,21 +7,13 @@
         create a dynamic story of your life by adding milestones, memories, and
         achievements.
       </p>
-      @if (!this.isAuthorized()) {
-        <div class="flex w-full flex-col items-center lg:flex-row">
-          <button
-            class="btn"
-            (click)="login()"
-            [attr.disabled]="isLoading() ? true : null">
-            @if (isLoading() === true) {
-              <span class="loading loading-spinner"></span>
-            }
-            authorize
-          </button>
-        </div>
-      } @else {
-        <a class="btn btn-primary" href="/my">go to timeline</a>
-      }
+      <div class="flex w-full flex-col items-center lg:flex-row">
+        @if (!this.isAuthorized()) {
+          <a class="btn btn-primary" href="/user/login">authorize</a>
+        } @else {
+          <a class="btn btn-primary" href="/my">go to timeline</a>
+        }
+      </div>
     </div>
   </app-hero>
 
