feat: showing uploaded image
feat: add loader for image of event

chore: update scheme

fix: fix pushing correct value og uploaded image id

fix: fix loader view

refactor: rename upload store to images store

feat: add images to queque after loading timeline

refactor: images of images store is unique now

feat: polling images data

fix: update image data after polling

feat: showing image after polling

--- a/src/app/feature/timeline/timeline.component.html
+++ b/src/app/feature/timeline/timeline.component.html
@@ -8,7 +8,7 @@
       </div>
 
       <div
-        class="w-full rounded-xl bg-base-100 p-2"
+        class="w-full overflow-hidden rounded-xl bg-base-100"
         [class.timeline-start]="event.changeDirection"
         [class.md:text-end]="event.changeDirection"
         [class.timeline-end]="!event.changeDirection"
