--- a/src/app/share/loader/loader.component.scss
+++ b/src/app/share/loader/loader.component.scss
@@ -14,11 +14,12 @@
   .sub-loader {
     @apply border-2 border-neutral-content;
     top: 25%;
+    left: 25%;
     width: 48px;
     height: 48px;
     border-radius: 50%;
     display: inline-block;
-    position: relative;
+    position: absolute;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
   }
