--- a/src/app/pages/authorized/my/my-page.component.html
+++ b/src/app/pages/authorized/my/my-page.component.html
@@ -5,41 +5,43 @@
         <progress class="progress w-3/4"></progress>
       </div>
     } @else {
-      @if (activeTimeline()) {
-        @if (showTipForAddEvent()) {
-          <div
-            class="tooltip tooltip-right tooltip-open tooltip-info"
-            data-tip="now you can add your first event">
-            <app-add-event-button
-              (addEvent)="dispatchNewEventCreation()"
-              [disabled]="canAddNewEvent() !== true" />
-          </div>
-        } @else {
-          <app-add-event-button
-            (addEvent)="dispatchNewEventCreation()"
-            [disabled]="canAddNewEvent() !== true" />
-        }
-
-        <app-edit-event />
-
-        <app-timeline
-          [timeline]="timeline()"
-          (filterByTag)="filterByTag($event)"
-          (delete)="deleteEvent($event)"
-          (edit)="editEvent($event)"
-          [canEdit]="true" />
-
-        <app-modal-confirm
-          [show]="showConfirmWindow()"
-          (confirmAction)="confirmDelete()"
-          (dismissAction)="dismissDelete()"
-          confirmMessage="Are you shure you want to delete this event?"></app-modal-confirm>
-      } @else {
+      @if (shouldAddTimeline()) {
         @if (activeAccount(); as account) {
           <app-create-timeline-button
             [isAuthorized]="true"
             [isLoading]="isLoading()"
             (addTimeline)="addTimeline($event, account.id)" />
+        }
+      } @else {
+        @if (activeTimeline()) {
+          @if (showTipForAddEvent()) {
+            <div
+              class="tooltip tooltip-right tooltip-open tooltip-info"
+              data-tip="now you can add your first event">
+              <app-add-event-button
+                (addEvent)="dispatchNewEventCreation()"
+                [disabled]="canAddNewEvent() !== true" />
+            </div>
+          } @else {
+            <app-add-event-button
+              (addEvent)="dispatchNewEventCreation()"
+              [disabled]="canAddNewEvent() !== true" />
+          }
+
+          <app-edit-event />
+
+          <app-timeline
+            [timeline]="timeline()"
+            (filterByTag)="filterByTag($event)"
+            (delete)="deleteEvent($event)"
+            (edit)="editEvent($event)"
+            [canEdit]="true" />
+
+          <app-modal-confirm
+            [show]="showConfirmWindow()"
+            (confirmAction)="confirmDelete()"
+            (dismissAction)="dismissDelete()"
+            confirmMessage="Are you shure you want to delete this event?"></app-modal-confirm>
         }
       }
     }
