fix: fix some mobile design issues

--- a/src/app/feature/timeline/components/event/tags/tags.component.html
+++ b/src/app/feature/timeline/components/event/tags/tags.component.html
@@ -1,5 +1,5 @@
 @if (tags().length > 0) {
   @for (tag of tags(); track $index) {
-    <a class="badge badge-neutral badge-sm mr-2">{{ tag.title }}</a>
+    <span class="badge badge-neutral badge-sm mr-2">{{ tag.title }}</span>
   }
 }
