--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -1,6 +1,6 @@
 <app-layout>
   <app-hero>
-    <img src="/assets/timeline.png" class="max-w-sm" alt="timeline" />
+    <img src="/assets/timeline.png" alt="timeline" />
     <div>
       <h1 class="text-5xl font-bold">add your first personal timeline</h1>
       <p class="py-6">
