fix: theme switcher for mobile version is simple

--- a/src/app/feature/ui/theme/theme-switch.component.html
+++ b/src/app/feature/ui/theme/theme-switch.component.html
@@ -1,10 +1,22 @@
-<input
-  type="checkbox"
-  id="toggle_theme"
-  class="toggle--checkbox hidden"
-  [checked]="isDark ? 'checked' : null"
-  (change)="themeService.toggleTheme()" />
+<div class="hidden lg:block">
+  <input
+    type="checkbox"
+    id="toggle_theme"
+    class="toggle--checkbox hidden"
+    [checked]="isDark() ? 'checked' : null"
+    (change)="themeService.toggleTheme()" />
 
-<label for="toggle_theme" class="toggle--label relative flex cursor-pointer">
-  <span class="toggle--label-background"></span>
-</label>
+  <label for="toggle_theme" class="toggle--label relative flex cursor-pointer">
+    <span class="toggle--label-background"></span>
+  </label>
+</div>
+
+<div class="lg:hidden">
+  <button class="btn btn-circle btn-ghost" (click)="themeService.toggleTheme()">
+    @if (isDark() === true) {
+      <ng-icon name="saxMoonBold" size="24"></ng-icon>
+    } @else {
+      <ng-icon name="hugeSun03" size="24"></ng-icon>
+    }
+  </button>
+</div>
