fix: fix mobile view of edit event form

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.scss
@@ -3,15 +3,21 @@
     ng-icon {
       @apply text-primary;
     }
-  }
-  a.active {
-    @apply btn-secondary;
-    ng-icon {
-      @apply text-primary-content;
+
+    span {
+      @apply hidden;
     }
-  }
-  a:not(.active) span {
-    @apply hidden;
+
+    &.active {
+      @apply btn-secondary;
+
+      ng-icon {
+        @apply text-primary-content;
+      }
+      span {
+        @apply lg:block;
+      }
+    }
   }
 }
 
