--- a/src/app/feature/timeline/components/event/menu/menu.component.html
+++ b/src/app/feature/timeline/components/event/menu/menu.component.html
@@ -1,9 +1,9 @@
 @if (timelineEvent().id) {
-  <ul class="bg-lighter menu menu-horizontal gap-2 rounded-box">
+  <ul class="join bg-base-300">
     <li>
       <a
         tabindex="0"
-        class="btn btn-ghost btn-sm"
+        class="btn btn-ghost join-item btn-sm"
         (click)="edit.emit(timelineEvent())"
         (keyup)="edit.emit(timelineEvent())">
         <ng-icon name="saxEditOutline" size="20" />
@@ -12,7 +12,7 @@
     <li>
       <a
         tabindex="0"
-        class="btn btn-ghost btn-sm hover:bg-warning hover:text-warning-content"
+        class="hover:text-warning-contenti btn btn-ghost join-item btn-sm hover:bg-warning"
         (click)="delete.emit(timelineEvent())"
         (keyup)="delete.emit(timelineEvent())">
         <ng-icon name="saxTrashOutline" size="20" />
