fix: fix showing event image

--- a/src/app/feature/timeline/components/event/image/image.component.html
+++ b/src/app/feature/timeline/components/event/image/image.component.html
@@ -1,5 +1,7 @@
-@if (isLoading()) {
-  <div class="relative h-60 w-full bg-base-100"><app-loader /></div>
-} @else {
-  <img [src]="image().previewUrl" [alt]="image().title" />
-}
+<div class="relative h-60 w-full">
+  @if (isLoading()) {
+    <app-loader />
+  } @else {
+    <img [src]="image().previewUrl" [alt]="image().title" />
+  }
+</div>
