fix: fix showing event menu for mobile devices

--- a/src/app/feature/timeline/components/event/menu/menu.component.html
+++ b/src/app/feature/timeline/components/event/menu/menu.component.html
@@ -1,5 +1,5 @@
 @if (timelineEvent().id) {
-  <ul class="join bg-base-300">
+  <ul class="join bg-secondary lg:bg-base-300">
     <li>
       <a
         tabindex="0"
