fix: fix date tooltip

--- a/src/app/feature/timeline/components/event/date/date.component.html
+++ b/src/app/feature/timeline/components/event/date/date.component.html
@@ -1,7 +1,7 @@
 @if (showRelevant()) {
   <div
     tabindex="0"
-    class="tooltip"
+    class="tooltip tooltip-bottom"
     [attr.data-tip]="date().date"
     (click)="toggle()"
     (keyup)="toggle()">
