fix: fix design

--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -1,8 +1,10 @@
 <app-layout>
   <app-hero>
-    <img src="/assets/timeline.png" alt="timeline" />
+    <img src="/assets/timeline_320x320.png" alt="timeline" />
     <div>
-      <h1 class="text-5xl font-bold">add your first personal timeline</h1>
+      <h1 class="text-4xl font-bold lg:text-5xl">
+        add your first personal timeline
+      </h1>
       <p class="py-6">
         create a dynamic story of your life by adding milestones, memories, and
         achievements.
