--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,24 @@
 @tailwind components;
 @tailwind utilities;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Inder', serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Lexend', serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .btn.logo,
 .logo {
   transition: 1s ease-out all;
