--- a/src/app/feature/user/features/show-user-features/show-user-features.component.html
+++ b/src/app/feature/user/features/show-user-features/show-user-features.component.html
@@ -2,7 +2,7 @@
   @for (feature of features(); track $index) {
     <div class="mt-4 flex">
       <div class="order flex-auto">
-        <p class="text-xl font-bold">{{ feature.name }}</p>
+        <p class="text-xl">{{ feature.name }}</p>
         <p>{{ feature.description }}</p>
       </div>
 
