feat: create effects for deleted useless images

--- a/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
+++ b/src/app/feature/edit-event/edit-event-form/edit-event-form.component.html
@@ -42,22 +42,20 @@
       <ng-icon name="saxLinkSquareOutline" size="24"></ng-icon>
       <span>add link</span>
     </a>
-    @if (this.isEditing() === false) {
-      <app-feature-flag
-        feature="upload_images"
-        [accountSettings]="accountSettings()">
-        <a
-          tabindex="0"
-          class="btn join-item"
-          [class.active]="isActiveTab(4)"
-          (click)="switchTo(4)"
-          (keyup)="switchTo(4)"
-          title="add image">
-          <ng-icon name="saxImageOutline" size="24"></ng-icon>
-          <span>add image</span>
-        </a>
-      </app-feature-flag>
-    }
+    <app-feature-flag
+      feature="upload_images"
+      [accountSettings]="accountSettings()">
+      <a
+        tabindex="0"
+        class="btn join-item"
+        [class.active]="isActiveTab(4)"
+        (click)="switchTo(4)"
+        (keyup)="switchTo(4)"
+        title="add image">
+        <ng-icon name="saxImageOutline" size="24"></ng-icon>
+        <span>add image</span>
+      </a>
+    </app-feature-flag>
   </div>
   <div>
     @if (isActiveTab(0)) {
@@ -180,7 +178,7 @@
         }
       </label>
     }
-    @if (isActiveTab(4) && isEditing() === false) {
+    @if (isActiveTab(4)) {
       <button
         class="upload_image_container btn btn-square mt-4 h-full w-full bg-no-repeat p-4"
         (click)="image.click()"
